--- a/libgen_EAD.ipynb
+++ b/libgen_EAD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -14,8 +14,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "Compile the cython code is highly recommended!\n",
+      "i am ms2 spectra plotter, and I have been sideloaded successfully\n",
+      "I have 2 functions, head to tail plot and ms2 plot\n",
+      "I am precursor matching!\n",
+      "I am mass recalibration, usage: mass_recalibrate(data)\n",
+      "the data column must have columns of mix_label, Average_mz, PRECURSORMZ, msms\n",
+      "the msms should in a string format, e.g. mass1\tintensity1\n",
+      "mass2\tintensity2\n",
+      "....\n",
+      "the recalibrated column would be msms_recalibrated\n"
      ]
     }
    ],
