--- a/test_pymzml.ipynb
+++ b/test_pymzml.ipynb
@@ -96,11 +96,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "for spec in mzml.read_one_spectrum(\"/Users/fanzhoukong/Documents/GitHub/Libgen_data/casmi/mzml/A_M3_negPFP_03.mzml\"):\n",
-    "    run.add_scan(spec)"
+    "    run.add_scan(spec)\n",
+    "    break\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  150.9143   1570.5586 ]\n",
+      " [  150.94595 11020.772  ]\n",
+      " [  150.97841  2286.698  ]\n",
+      " ...\n",
+      " [ 1390.3246   1762.4167 ]\n",
+      " [ 1424.94     1744.0703 ]\n",
+      " [ 1475.5564   2234.0452 ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(spec['peaks'])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "run['rt']"
    ],
    "metadata": {
     "collapsed": false,
